# web_password

.github/workflows/: github-actions-demo.yml
src/: pyproject.toml
src/app/core/: settings.py
