[tool.poetry]
name = "web_password"
version = "0.1.0"
description = ""
authors = ["Dormidontov A.A <khdr437@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
SQLAlchemy = "^1.4.29"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
autoflake = "^1.4"
black = "^21.12b0"
mypy = "^0.930"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
